# python_design_patterns

./: pyproject.toml  requirements.txt
creational/abstract_factory/: README.md  main.py
creational/abstract_factory/factories/: __init__.py  forniture_factory.py  modern_factory.py  victorian_factory.py
creational/abstract_factory/fornitures/: __init__.py
creational/abstract_factory/interfaces/: __init__.py  chair_interface.py  coffetable_interface.py  forniture_factory_interface.py  sofa_interface.py
creational/builder/: README.md  main.py
creational/builder/builders/: __init__.py  house_builder.py
creational/builder/config/: __init__.py  house_director_config.py
creational/builder/directors/: __init__.py  house_director.py
creational/builder/interfaces/: __init__.py  house_builder_interface.py  house_interface.py
creational/factory_method/: README.md  main.py
creational/factory_method/enums/: __init__.py  transports_enum.py
creational/factory_method/interfaces/: __init__.py  logistic_abstract_class.py  transport_abstract_class.py
creational/factory_method/logistics/: __init__.py  aquatic_logistic_class.py  logistic_factory_class.py  (+1 more)
creational/prototype/: README.md  main.py
creational/singleton/: README.md  main.py
structural/adapter/: README.md  main.py
structural/bridge/: README.md  main.py
structural/composite/: README.md  main.py
structural/decorator/: README.md  main.py
structural/facade/: README.md  main.py
structural/flyweight/: README.md  main.py
structural/proxy/: main.py
virtualenv/: pyvenv.cfg
(+79 files in other folders)
